[gd_scene load_steps=19 format=2]

[ext_resource path="res://Editor/Objects/TextureRect.gd" type="Script" id=1]
[ext_resource path="res://Editor/Objects/6.png" type="Texture" id=2]
[ext_resource path="res://Editor/Objects/0.png" type="Texture" id=3]
[ext_resource path="res://Editor/Objects/5.png" type="Texture" id=4]
[ext_resource path="res://Editor/Objects/1.png" type="Texture" id=5]
[ext_resource path="res://Editor/Objects/19.png" type="Texture" id=6]
[ext_resource path="res://Editor/Objects/2.png" type="Texture" id=7]
[ext_resource path="res://Editor/Objects/3.png" type="Texture" id=8]
[ext_resource path="res://Editor/Objects/26.png" type="Texture" id=9]
[ext_resource path="res://Editor/Objects/portal.png" type="Texture" id=10]
[ext_resource path="res://Editor/Objects/Spawn.png" type="Texture" id=11]
[ext_resource path="res://Editor/Objects/+.png" type="Texture" id=12]
[ext_resource path="res://Editor/Objects/-.png" type="Texture" id=13]
[ext_resource path="res://Resources/Lock.png" type="Texture" id=14]
[ext_resource path="res://Editor/LateralMenu.gd" type="Script" id=15]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFontData" id=2]
antialiased = false
hinting = 0
font_path = "res://Resources/Fuentes/Kenney Pixel.ttf"

[sub_resource type="DynamicFont" id=3]
size = 31
font_data = SubResource( 2 )

[node name="Control" type="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -208.0
margin_top = -557.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 3
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
rect_min_size = Vector2( 210, 0 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.99664
margin_bottom = -2.99664
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 200.0
margin_bottom = 547.0
rect_min_size = Vector2( 0, 500 )
size_flags_vertical = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 190.0
margin_bottom = 457.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Mapa" type="Tabs" parent="Panel/MarginContainer/VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Mapa"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -74.0
margin_right = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Mapa/VBoxContainer"]
margin_right = 148.0
margin_bottom = 64.0
size_flags_horizontal = 3
custom_constants/separation = 20
alignment = 1

[node name="0" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Mapa/VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
script = ExtResource( 1 )

[node name="1" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Mapa/VBoxContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 148.0
margin_bottom = 64.0
texture = ExtResource( 5 )
script = ExtResource( 1 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Mapa/VBoxContainer"]
margin_top = 84.0
margin_right = 148.0
margin_bottom = 148.0
size_flags_horizontal = 3
custom_constants/separation = 20
alignment = 1

[node name="3" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Mapa/VBoxContainer/HBoxContainer2"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 8 )
script = ExtResource( 1 )

[node name="2" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Mapa/VBoxContainer/HBoxContainer2"]
margin_left = 84.0
margin_right = 148.0
margin_bottom = 64.0
texture = ExtResource( 7 )
script = ExtResource( 1 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Mapa/VBoxContainer"]
margin_top = 168.0
margin_right = 148.0
margin_bottom = 232.0
size_flags_horizontal = 3
custom_constants/separation = 20
alignment = 1

[node name="5" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Mapa/VBoxContainer/HBoxContainer3"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 4 )
script = ExtResource( 1 )

[node name="6" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Mapa/VBoxContainer/HBoxContainer3"]
margin_left = 84.0
margin_right = 148.0
margin_bottom = 64.0
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Mapa/VBoxContainer"]
margin_top = 252.0
margin_right = 148.0
margin_bottom = 316.0
size_flags_horizontal = 3
custom_constants/separation = 20
alignment = 1

[node name="19" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Mapa/VBoxContainer/HBoxContainer4"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 6 )
script = ExtResource( 1 )

[node name="26" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Mapa/VBoxContainer/HBoxContainer4"]
margin_left = 84.0
margin_right = 148.0
margin_bottom = 64.0
texture = ExtResource( 9 )
script = ExtResource( 1 )

[node name="HBoxContainer5" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Mapa/VBoxContainer"]
margin_top = 336.0
margin_right = 148.0
margin_bottom = 400.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="Goal" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Mapa/VBoxContainer/HBoxContainer5"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 10 )
script = ExtResource( 1 )

[node name="Spawn" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Mapa/VBoxContainer/HBoxContainer5"]
margin_left = 84.0
margin_right = 148.0
margin_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 11 )
expand = true
stretch_mode = 5
script = ExtResource( 1 )

[node name="Habilidades" type="Tabs" parent="Panel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -74.0
margin_right = 74.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer"]
margin_right = 148.0
margin_bottom = 110.0
custom_constants/separation = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 110.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 5
alignment = 1

[node name="DigSide" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 14 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 69.0
margin_right = 64.0
margin_bottom = 83.0
text = "0"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 88.0
margin_right = 64.0
margin_bottom = 110.0
alignment = 1

[node name="-" type="Button" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 2.0
margin_right = 30.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 13 )

[node name="+" type="Button" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 34.0
margin_right = 62.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 12 )

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 148.0
margin_bottom = 110.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 5
alignment = 1

[node name="DigDown" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 14 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_top = 69.0
margin_right = 64.0
margin_bottom = 83.0
text = "0"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_top = 88.0
margin_right = 64.0
margin_bottom = 110.0
alignment = 1

[node name="-" type="Button" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
margin_left = 2.0
margin_right = 30.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 13 )

[node name="+" type="Button" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
margin_left = 34.0
margin_right = 62.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 12 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer"]
margin_top = 135.0
margin_right = 148.0
margin_bottom = 245.0
custom_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer2"]
margin_right = 64.0
margin_bottom = 110.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 5
alignment = 1

[node name="Stopper" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 14 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 69.0
margin_right = 64.0
margin_bottom = 83.0
text = "0"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 88.0
margin_right = 64.0
margin_bottom = 110.0
alignment = 1

[node name="-" type="Button" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 2.0
margin_right = 30.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 13 )

[node name="+" type="Button" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 62.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 12 )

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer2"]
margin_left = 84.0
margin_right = 148.0
margin_bottom = 110.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 5
alignment = 1

[node name="Umbrella" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 14 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 69.0
margin_right = 64.0
margin_bottom = 83.0
text = "0"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 88.0
margin_right = 64.0
margin_bottom = 110.0
alignment = 1

[node name="-" type="Button" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
margin_left = 2.0
margin_right = 30.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 13 )

[node name="+" type="Button" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
margin_left = 34.0
margin_right = 62.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 12 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer"]
margin_top = 270.0
margin_right = 148.0
margin_bottom = 380.0
custom_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer3"]
margin_right = 64.0
margin_bottom = 110.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 5
alignment = 1

[node name="Stair" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 14 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_top = 69.0
margin_right = 64.0
margin_bottom = 83.0
text = "0"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_top = 88.0
margin_right = 64.0
margin_bottom = 110.0
alignment = 1

[node name="-" type="Button" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer"]
margin_left = 2.0
margin_right = 30.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 13 )

[node name="+" type="Button" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 62.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 12 )

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer3"]
margin_left = 84.0
margin_right = 148.0
margin_bottom = 110.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 5
alignment = 1

[node name="Climber" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer3/VBoxContainer2"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 14 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer3/VBoxContainer2"]
margin_top = 69.0
margin_right = 64.0
margin_bottom = 83.0
text = "0"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer3/VBoxContainer2"]
margin_top = 88.0
margin_right = 64.0
margin_bottom = 110.0
alignment = 1

[node name="-" type="Button" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer3/VBoxContainer2/HBoxContainer"]
margin_left = 2.0
margin_right = 30.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 13 )

[node name="+" type="Button" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer3/VBoxContainer2/HBoxContainer"]
margin_left = 34.0
margin_right = 62.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 12 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 467.0
margin_right = 190.0
margin_bottom = 537.0
custom_constants/separation = 10
alignment = 2

[node name="Try" type="Button" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 190.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
text = "Probar nivel"

[node name="Save" type="Button" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 190.0
margin_bottom = 70.0
hint_tooltip = "Tienes que superar primero el nivel probándolo para guardarlo"
custom_fonts/font = SubResource( 3 )
text = "Guardar nivel"

[connection signal="mouse_entered" from="." to="." method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Control_mouse_exited"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/-" to="." method="_on_digSide_minus_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/+" to="." method="_on_digSide_plus_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer/-" to="." method="_on_digDown_minus_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer/VBoxContainer3/HBoxContainer/+" to="." method="_on_digDown_plus_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer/-" to="." method="_on_stopper_minus_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer/+" to="." method="_on_stopper_plus_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer/-" to="." method="_on_umbrella_minus_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer/+" to="." method="_on_umbrella_plus_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer/-" to="." method="_on_stair_minus_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer/+" to="." method="_on_stair_plus_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer3/VBoxContainer2/HBoxContainer/-" to="." method="_on_climber_minus_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/TabContainer/Habilidades/VBoxContainer/HBoxContainer3/VBoxContainer2/HBoxContainer/+" to="." method="_on_climber_plus_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer/Try" to="." method="_on_Try_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer/Save" to="." method="_on_Save_pressed"]
